--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">FoodPlanner</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Name">Name</string>
+    <string name="name_hint">"Enter Your Name "</string>
+    <string name="Email_hit">Enter Email</string>
+    <string name="password_hint">Enter Password</string>
+    <string name="btn_login">"Login "</string>
 </resources>
