--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">FoodPlanner</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="searchBy">Search by:</string>
+    <string name="cuisine">Cuisine</string>
+    <string name="category">Category</string>
+    <string name="ingridients">Ingredients</string>
+    <string name="allMeals">All meals</string>
+    <string name="cuisines">Cuisines</string>
+    <string name="categories">Categories</string>
+    <string name="search_ingridients">Ingridients</string>
+    <string name="Search_Ingredients">Ingredients</string>
 </resources>
