adding colors and design to the login page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="Email_hit">Enter Email</string>
     <string name="password_hint">Enter Password</string>
     <string name="btn_login">"Login "</string>
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="message">you can sign up using these options</string>
 </resources>
