--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="Email_hit">Enter Email</string>
     <string name="password_hint">Enter Password</string>
     <string name="btn_login">"Login "</string>
+    <string name="DailyInspiration_txt">Daily Inspiration</string>
+    <string name="youmight_txt">You Might Like</string>
+    <string name="Sign_up_txt">Signup</string>
+    <string name="lgin" />
+    <string name="login_txt">Login</string>
+    <string name="login">Login</string>
+    <string name="log_in_txt">Login</string>
 </resources>
