--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="login_txt">Login</string>
     <string name="login">Login</string>
     <string name="log_in_txt">Login</string>
+    <string name="Welcome_txt">WELCOME</string>
 </resources>
