updates on home screen ✌️

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="forgottxt">Forgot Password? Recover</string>
     <string name="skipBtn">Skip</string>
     <string name="skip">Skip</string>
+    <string name="btnfav">"      "</string>
 
 
 </resources>
