--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
 
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="message">you can sign up with the following options:</string>
+    <string name="message">You can also sign up with google</string>
     <string name="signUp">Sign Up</string>
     <string name="name">Name</string>
     <string name="daily_insp_txt">Daily Inspiration</string>
@@ -38,7 +38,7 @@
     <string name="favoriteCuisine">search your favorite cuisine</string>
     <string name="favoriteIngredient">search your favorite ingredient</string>
     <string name="favoriteCategory">search your favorite Category</string>
-    <string name="favorites">Favorites</string>
+    <string name="favorites">Your favorites</string>
     <string name="recipe">Recipe :</string>
     <string name="get_start">get start</string>
 
@@ -50,6 +50,9 @@
     <string name="skipBtn">Skip</string>
     <string name="skip">Skip</string>
     <string name="btnfav">"      "</string>
+    <string name="welcome">Welcome</string>
+    <string name="ing">Ingredients</string>
+    <string name="recipeTiltle">Recipe</string>
 
 
 </resources>
