--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,17 +54,31 @@
     <string name="show_more_btn">Show More Details</string>
     <string name="welcome">Welcome</string>
     <string name="ing">Ingredients</string>
-    <string name="recipeTiltle">Recipe</string>
+    <string name="recipeTitlele">Recipe</string>
     <string name="appName">𝒄𝒉𝒆𝒇𝒌𝒐</string>
     <string name="Scroll_Plan">PlanScroll</string>
     <string name="planTopTxt">Plan Your Meals</string>
     <string name="sat_txt">Saturday</string>
     <string name="sun_txt">Sunday</string>
     <string name="mon_txt">Monday</string>
-    <string name="tus_txt">Tuseday</string>
+    <string name="tus_txt">Tuesday</string>
     <string name="wed_txt">Wednesday</string>
     <string name="Thu_txt">Thursday</string>
     <string name="Fri_txt">Friday</string>
+
+    <string-array name="calendar">
+        <item>Saturday</item>
+        <item>Sunday</item>
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+
+
+
+    </string-array>
+
 
 
 </resources>
