--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="show_more_btn">Show More Details</string>
     <string name="welcome">Welcome</string>
     <string name="ing">Ingredients</string>
-    <string name="recipeTitlele">Recipe</string>
+    <string name="recipeTiltle">Recipe</string>
     <string name="appName">𝒄𝒉𝒆𝒇𝒌𝒐</string>
     <string name="Scroll_Plan">PlanScroll</string>
     <string name="planTopTxt">Plan Your Meals</string>
