--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,18 @@
     <string name="wed_txt">Wednesday</string>
     <string name="Thu_txt">Thursday</string>
     <string name="Fri_txt">Friday</string>
+    <string-array name="calendar">
+        <item>Saturday</item>
+        <item>Sunday</item>
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+
+
+
+    </string-array>
 
 
 </resources>
