--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="recipe">Recipe :</string>
     <string name="get_start">get start</string>
 
-    <string name="description1"> "You'll find every recipe you need"</string>
+    <string name="description1"> "Every recipe you need"</string>
     <string name="description2"> Explore different cuisines</string>
     <string name="description3">Let\'s do It together</string>
     <string name="logoutbtn">Logout</string>
